# nn

./: .gitignore  Cargo.toml  LICENSE
examples/: mnist.rs  nnfs.rs  nnfs_manual.rs  xor.rs
src/: activation.rs  conversions.rs  error.rs  functions.rs  helpers.rs  layer.rs  lib.rs  loss.rs  model.rs
src/test_util/: constants.rs  mod.rs
