[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = [] }
ndarray-rand = "0.14"
ndarray-stats = "0.5"

# arrayfire = "3.8"

[[example]]
name = "mnist"

[dev-dependencies]
mnist_read = "*"
