[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
ndarray = { version = "0.15", features = ["blas", "serde-1"] }
ndarray-rand = "0.14"
ndarray-stats = "0.5"
openblas-src = { version = "0.10.7", features = ["cblas", "system"] }

[dev-dependencies]
mnist_read = "*"
blas-src = { version = "0.8", features = ["openblas"] }
